[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/book.png" type="Texture" id=1]
[ext_resource path="res://themes/default_body.tres" type="Theme" id=2]
[ext_resource path="res://ui/journal/journal.gd" type="Script" id=3]

[node name="Journal" type="TextureRect"]
pause_mode = 2
margin_left = 10.0
margin_right = 1926.0
margin_bottom = 1115.0
theme = ExtResource( 2 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 3 )

[node name="LeftPage" type="VBoxContainer" parent="."]
margin_left = 354.0
margin_top = 197.0
margin_right = 879.0
margin_bottom = 913.0

[node name="Label" type="Label" parent="LeftPage"]
margin_right = 525.0
margin_bottom = 667.0
custom_colors/font_color = Color( 0.337255, 0.337255, 0.337255, 1 )
text = "Revisit a previous point in entry. 

Future entries will be erased."
autowrap = true

[node name="ItemList" type="ItemList" parent="LeftPage"]
margin_top = 671.0
margin_right = 525.0
margin_bottom = 716.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
items = [ "Week 0", null, false, "Week 1", null, false, "Week 2", null, false, "Week 3", null, false ]
__meta__ = {
"_editor_description_": ""
}

[node name="RightPage" type="ScrollContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -904.0
margin_top = 186.0
margin_right = -320.0
margin_bottom = -210.0
scroll_horizontal_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="RightPage"]
margin_right = 584.0
margin_bottom = 719.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0.305882, 0.305882, 0.305882, 1 )
bbcode_text = "Nothing important happened."
text = "Nothing important happened."

[connection signal="item_activated" from="LeftPage/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="LeftPage/ItemList" to="." method="_on_ItemList_item_selected"]
